--- a/UniversityBlazor/_Imports.razor
+++ b/UniversityBlazor/_Imports.razor
@@ -14,3 +14,5 @@
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using UniversityBlazor.Models
+@using UniversityBlazor.ViewModels
+@* @using UniversityApplication.Dtos; *@
