--- a/UniversityBlazor/Pages/Account/Profile.razor
+++ b/UniversityBlazor/Pages/Account/Profile.razor
@@ -29,7 +29,7 @@ else
         </div>
 
         <div class="form-group">
-            <label>Фамилия:</label>
+            <label>Surname</label>
             <InputText @bind-Value="profile.Surname" class="form-control" />
             <ValidationMessage For="@(() => profile.Surname)" />
         </div>
