--- a/UniversityBlazor/Layout/MainLayout.razor
+++ b/UniversityBlazor/Layout/MainLayout.razor
@@ -5,7 +5,7 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
+@*         <div class="top-row px-4">
             <AuthorizeView>
                 <Authorized>
                     <a href="/Profile">Profile</a>
@@ -14,7 +14,7 @@
                     <a href="/Login">Login</a>
                 </NotAuthorized>
             </AuthorizeView>
-        </div>
+        </div> *@
 
         <article class="content px-4">
             @Body
