--- a/UniversityBlazor/Layout/NavMenu.razor
+++ b/UniversityBlazor/Layout/NavMenu.razor
@@ -20,7 +20,7 @@
             <NotAuthorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Login" Match="NavLinkMatch.All">
-                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Login
+                        <span class="bi bi-person-circle" aria-hidden="true"></span> Login
                     </NavLink>
                 </div>
             </NotAuthorized>
