--- a/UniversityBlazor/Layout/NavMenu.razor
+++ b/UniversityBlazor/Layout/NavMenu.razor
@@ -16,6 +16,11 @@
                         <span class="bi bi-person-circle" aria-hidden="true"></span> Profile
                     </NavLink>
                 </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="Schedule" Match="NavLinkMatch.All">
+                        <span class="bi bi-person-circle" aria-hidden="true"></span> Schedule
+                    </NavLink>
+                </div>
             </Authorized>
             <NotAuthorized>
                 <div class="nav-item px-3">
