--- a/UniversityBlazor/Layout/NavMenu.razor
+++ b/UniversityBlazor/Layout/NavMenu.razor
@@ -1,4 +1,9 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject NavigationManager NavigationManager
+@inject ILocalStorageService LocalStorage
+@inject AuthenticationStateProvider AuthProvider
+@using UniversityBlazor.Providers
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">UniversityBlazor</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -7,49 +12,61 @@
     </div>
 </div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+<div class="@NavMenuCssClass nav-scrollable d-flex flex-column justify-content-between">
     <nav class="flex-column">
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Profile" Match="NavLinkMatch.All">
-                        <span class="bi bi-person-circle" aria-hidden="true"></span> Profile
+                        <i class="bi bi-person-circle"></i> Profile
                     </NavLink>
                 </div>
             </Authorized>
             <NotAuthorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Login" Match="NavLinkMatch.All">
-                        <span class="bi bi-person-circle" aria-hidden="true"></span> Login
+                        <i class="bi bi-box-arrow-in-right"></i> Login
                     </NavLink>
                 </div>
             </NotAuthorized>
         </AuthorizeView>
+
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Groups">
-                        <span class="bi bi-people-fill" aria-hidden="true"></span> Groups
+                        <i class="bi bi-people-fill"></i> Groups
                     </NavLink>
                 </div>
             </Authorized>
         </AuthorizeView>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <i class="bi bi-house-door-fill"></i> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+                <i class="bi bi-plus-square-fill"></i> Counter
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+                <i class="bi bi-list-nested"></i> Weather
             </NavLink>
         </div>
     </nav>
+
+    <AuthorizeView>
+        <Authorized>
+            <div class="nav-item px-3 mb-3">
+                <button class="btn btn-link nav-link text-start w-100" @onclick="Logout">
+                    <i class="bi bi-box-arrow-right"></i> Logout
+                </button>
+            </div>
+        </Authorized>
+    </AuthorizeView>
 </div>
 
 @code {
@@ -60,5 +77,18 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    private async Task Logout()
+    {
+        await LocalStorage.RemoveItemAsync("jwt");
+        await LocalStorage.RemoveItemAsync("refresh");
+
+        if (AuthProvider is JwtAuthenticationStateProvider jwtAuth)
+        {
+            await jwtAuth.GetAuthenticationStateAsync();
+        }
+
+        NavigationManager.NavigateTo("/login", forceLoad: true);
     }
 }
