--- a/UniversityBlazor/Layout/NavMenu.razor
+++ b/UniversityBlazor/Layout/NavMenu.razor
@@ -41,6 +41,17 @@
             </Authorized>
         </AuthorizeView>
 
+        <AuthorizeView>
+        <Authorized>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Grades">
+                <span class="bi bi-bar-chart-line" aria-hidden="true"></span> Grades
+            </NavLink>
+        </div>
+    </Authorized>
+</AuthorizeView>
+
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <i class="bi bi-house-door-fill"></i> Home
