--- a/UniversityBlazor/Pages/Home.razor
+++ b/UniversityBlazor/Pages/Home.razor
@@ -1,7 +1,14 @@
 ﻿@page "/"
+@inject NavigationManager navigationManager
 
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+@code {
+    protected override async Task OnInitializedAsync()
+    {
+        navigationManager.NavigateTo("/login");
+    }
+}
